added jacoco config and modified tests